 * 2012-09-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 22974: Exclude distribution lists from synchronization

* 2012-09-21 - martin.herfurth@open-xchange.com

 - Fix for bug 23055: External Participant with different upper/lower case spelling are detected as party crasher.

* 2012-09-20 - marcus.klein@open-xchange.com

 - Fix for bug 22405: Extended build system to support arbitrary resources in bundles. Added fetcher.properties to bundle resources.

* 2012-09-20 - thorben.betten@open-xchange.com

 - Fix for bug 22980: No "hidden" mailbox expunge anymore
 - Fix for bug 22897: Delete only matching session if marked for removal
 - Fix for bug 23037: Properly mapping parsed TNEF read receipt to a multipart

 * 2012-09-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 23046: Skip validation of URL property in vCards

* 2012-09-19 - francisco.laguna@open-xchange.com

 - Fix for bug 22525: Remove I18nService from needed services array in subscription json activator, since they are discovered dynamically.

* 2012-09-19 - marcus.klein@open-xchange.com

 - Fix for bug 22776: Made the new administration SOAP interface based on Apache CXF as conform as possible to previous Axis2 framework.

* 2012-09-19 - thorben.betten@open-xchange.com

 - Fix for bug 23025: Return proper JSON response if GAB is disabled for requested user(s)
 - Fix for bug 23045: More lenient scanner behavior for VCard parsing

* 2012-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 22881: Fixed update operation for personal data
 - Fix for bug 23036: Fixed possible IndexOutOfBoundsException when accessing arguments

* 2012-09-18 - francisco.laguna@open-xchange.com

 - Fix for bug 22989: Respond with proper error message if a subscription can not be loaded.
 - Fix for bug 22990: Fixed NPE.

* 2012-09-18 - marcus.klein@open-xchange.com

 - Fix for bug 22064: If parsing of the JSON value fails a understandable exception message is now generated for the user.
